--- a/package.json
+++ b/package.json
@@ -16,45 +16,49 @@
     "postgres": "3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.31.0"
+    "sharp": "^0.31.0",
+    "styled-jsx": "^5.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "12.3.1",
     "@ts-safeql/eslint-plugin": "0.0.16",
-    "@types/node": "18.8.1",
+    "@types/dotenv-safe": "^8.1.2",
+    "@types/eslint": "8.4.6",
+    "@types/js-cookie": "^3.0.2",
+    "@types/node": "18.8.5",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "5.39.0",
-    "@typescript-eslint/parser": "5.39.0",
-    "@upleveled/eslint-config-upleveled": "2.16.2",
+    "@types/sharp": "^0.31.0",
+    "@typescript-eslint/eslint-plugin": "5.40.0",
+    "@typescript-eslint/parser": "5.40.0",
+    "@upleveled/eslint-config-upleveled": "^3.3.9",
     "@upleveled/eslint-plugin-upleveled": "2.1.6",
-    "eslint": "8.24.0",
+    "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-react-app": "7.0.1",
     "eslint-import-resolver-typescript": "3.5.1",
-    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.1.0",
+    "eslint-plugin-jest": "27.1.1",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-jsx-expressions": "1.3.1",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-security": "1.5.0",
-    "eslint-plugin-sonarjs": "0.15.0",
+    "eslint-plugin-sonarjs": "0.16.0",
     "eslint-plugin-testing-library": "5.7.2",
-    "eslint-plugin-unicorn": "44.0.0",
+    "eslint-plugin-unicorn": "44.0.2",
     "typescript": "4.8.4"
   },
   "resolutions": {
-    "@typescript-eslint/eslint-plugin": "5.38.0",
-    "@typescript-eslint/parser": "5.38.0",
+    "@typescript-eslint/eslint-plugin": "5.40.0",
+    "@typescript-eslint/parser": "5.40.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "27.0.4",
+    "eslint-plugin-jest": "27.1.1",
     "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "@typescript-eslint/utils": "5.38.0"
+    "@typescript-eslint/utils": "5.40.0"
   }
 }
