--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@types/dotenv": "^8.2.0",
+    "dotenv-cli": "^6.0.0",
     "dotenv-safe": "^8.2.0",
     "js-cookie": "^3.0.1",
+    "ley": "^0.8.1",
     "next": "12.3.1",
     "postgres": "3.3.1",
     "react": "18.2.0",
