--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "postgres": "3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.31.0",
-    "styled-jsx": "^5.1.0"
+    "sharp": "^0.31.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
@@ -36,7 +35,7 @@
     "@types/sharp": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
-    "@upleveled/eslint-config-upleveled": "^3.3.9",
+    "@upleveled/eslint-config-upleveled": "^3.4.2",
     "@upleveled/eslint-plugin-upleveled": "2.1.6",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
