Change .yml to .yaml and Dockerfile, update img source

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PGHOST=##########
-PGUSERNAME=##########
-PGPASSWORD=##########
-PGDATABASE=##########
+PGHOST=XXXXXXX
+PGUSERNAME=XXXXXXX
+PGPASSWORD=XXXXXXX
+PGDATABASE=XXXXXXXXX
